[package]
name = "ton_api"
version = "0.0.1"
authors = [
    "Aaron Gallagher <_@habnab.it>",
    "Connie Hilarides <connorcpu@live.com>",
    "Denis K. <denis.k@tonlabs.io>",
    "Alexey Vavilin <alexey.v@tonlabs.io",
]
description = "Minimal wrappers for TON serialization using TL-schema"
edition = "2018"

[dependencies]
byteorder = "1.4"
erased-serde = "0.3"
extfmt = "0.1"
failure = "0.1"
lazy_static = "1.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }

[dependencies.ordered-float]
version = "2.5"
features = ["serde"]

[dependencies.secstr]
version = "0.4"
features = ["serde"]

[build-dependencies]
failure = "0.1"

[build-dependencies.ton_tl_codegen]
path = "../ton_tl_codegen"
version = "0.0.1"
features = []

[features]
default = ["lite_api"]
lite_api = []
ton_api = []
